force-app/main/default/objects/Slack_Message__c/Slack_Message__c.object-meta.xml
<CustomObject>
    <description>A message you want to send to slack. Once it&apos;s created, it will be sent immediately to the channel that you specified.</description>
    <label>Slack Message</label>
    <nameField>
        <displayFormat>SM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slack Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>