force-app/main/default/objects/Slack_Message__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>The message you want to send to Slack, in JSON format, created in the Slack Block Kit Builder.</description>
    <inlineHelpText>The message you want to send to Slack, in JSON format, created in the Slack Block Kit Builder.</inlineHelpText>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>