force-app/main/default/objects/Slack_Message__c/fields/Only_visible_to_you__c.field-meta.xml
<CustomField>
    <fullName>Only_visible_to_you__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if you want to send a &quot;Only visible to you&quot; Slack message, which is only visible for one slack user, not for the rest of the channel.</description>
    <inlineHelpText>Check this if you want to send a &quot;Only visible to you&quot; Slack message, which is only visible for one slack user, not for the rest of the channel.</inlineHelpText>
    <label>Hidden Message?</label>
    <type>Checkbox</type>
</CustomField>