force-app/main/default/objects/Slack_Message__c/fields/Slack_Channel__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The channel you want to send the message to.</description>
    <label>Slack Channel</label>
    <referenceTo>Slack_Channel__c</referenceTo>
    <relationshipLabel>Slack Messages</relationshipLabel>
    <relationshipName>Slack_Messages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>