force-app/main/default/objects/Slack_Message__c/fields/Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>Thread_ID__c</fullName>
    <description>The ID of an existing Slack Thread, if you want to send your message as a reply to a specific thread.</description>
    <inlineHelpText>The ID of an existing Slack Thread, if you want to send your message as a reply to a specific thread.</inlineHelpText>
    <label>Thread ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>