force-app/main/default/objects/Slack_Message__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Slack_Channel__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>